# bosclock

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/ui/: Hand.qml  main.qml
plugin/: BosClock.cpp  BosClock.h  CMakeLists.txt  DateTimeSource.cpp  DateTimeSource.h  qmldir
